# isw

./: README.md  isw-gui  pyproject.toml
src/isw/: __init__.py  cli.py  config.py  constants.py  ec.py
src/isw/gui/: app.py  controls.py  fan_curve.py  monitor.py  profiles.py
src/isw/resources/: isw.desktop
